# nyu

./: .gitignore  .gitmodules  Gopkg.toml  LICENSE  Makefile  README.md  RUNS.md  ai.go  bundler.json  cli.go  db.go  decryption.cpp  decryption.hpp  dictionary.hpp  dictionary.txt  docker-compose.yaml  encryption.cpp  encryption.hpp  frequency.cpp  frequency.hpp  gui.go  key.cpp  key.hpp  logic.go  main.cpp  main.go  matrix.cpp  matrix.hpp  models.go  nginx.conf  requirements.txt  server.go  test.cpp  utils.cpp  utils.go  utils.hpp  uwsgi.ini
Database Project/: index.html  script.js  student.html  style.css
class/1/: 1.cpp  README.md  a.out  sort.py
class/10/: 10.cpp  a.out  main.cpp
class/10cprogramming/: longjmp.c
class/11/: 11.cpp  (+3 more)
csuy-1124/: Makefile
csuy-3083/: README.md
csuy-3224/: README.md
csuy-3393/: README.md
csuy-3943-comp/: README.md
csuy-4533/: README.md
csuy-4533/example/1/: CMakeLists.txt  example.cpp
csuy-4613/: Gopkg.toml  README.md  ai.go  bundler.json  cli.go  gui.go  logic.go  main.go  utils.go
csuy-4783/: README.md
csuy-4793/: README.md
db/: 01-accounts.sql  02-professors.sql  03-students.sql  04-courses.sql  05-enrollments.sql  Dockerfile  import.sh  restaurant-mysql.sql
etc/: a.out  midtermreview.cpp
exam/: midterm.sql
example/4/: CMakeLists.txt  checker-new.cpp  fTexture.glsl
homework/1/: 1.cpp  CMakeLists.txt  HW1.txt  Makefile  README.md  a.out  combination-lock.cpp  combination-lock.h  dynarray.cpp  dynarray.h  encrypted.txt  hello.c  hw01.cpp  hw1.c  life.c  main.py  quicksort.py  sample.cpp  selection.py  tail-linux.c  tail.c  test.py
homework/1/results/: 10-descending.txt  10-random.txt  100-descending.txt  100-random.txt  1000-descending.txt  10000-ascending.txt  10000-descending.txt  25-descending.txt  250-descending.txt  25000-random.txt  50-ascending.txt  50-descending.txt  50-random.txt  5000-ascending.txt  5000-descending.txt
homework/1/results/ascending/: 10-ascending.txt  10.txt  100-ascending.txt  100.txt  1000-ascending.txt  1000.txt  10000.txt  25-ascending.txt  25.txt  250-ascending.txt  250.txt  2500-ascending.txt  2500.txt  25000-ascending.txt  25000.txt  50.txt  500-ascending.txt  500.txt  5000.txt
homework/1/results/descending/: 10.txt  100.txt  1000.txt  10000.txt  25.txt  250.txt  2500-descending.txt  2500.txt  25000-descending.txt  25000.txt  50.txt  500-descending.txt  500.txt  5000.txt
homework/1/results/random/: 10.txt  100.txt  1000-random.txt  1000.txt  10000-random.txt  10000.txt  25-random.txt  25.txt  250-random.txt  250.txt  2500-random.txt  2500.txt  25000.txt  50.txt  500-random.txt  500.txt  5000-random.txt  5000.txt
other/: calculate_digram_frequencies.py  english_words.txt  english_words_digram_frequency.csv  english_words_digram_frequency.txt  gen.sh  plaintext_dictionary_digram_frequency.csv  plaintext_dictionary_digram_frequency.txt
project/: .dockerignore  docker-compose.yaml  ghostAgents.py  index.html  main.css  main.js  search.py  searchAgents.py
project1/: Makefile  decryption.cpp  decryption.hpp  dictionary.cpp  dictionary.hpp  encryption.cpp  frequency.cpp  frequency.hpp  main.cpp  matrix.cpp  runner.cpp  test.cpp  utils.hpp
project2/: Dockerfile  EncryptionWrapper.cs  KeybaseAPI.cs  Makefile  Output.cs  Program.cs  README.md  bootstrap-docker.sh  main.cpp  park.sh  project2.csproj  utils.hpp  wrapper.hpp
samples/: beemovie.ciphertext.txt  beemovie.plaintext.txt  beemovie.plaintext_digram_frequency.txt  dictionary.plaintext.txt  random.plaintext.txt  words.ciphertext.txt  words.keymap.txt  words.plaintext_digram_frequency.txt
scripts/: build.sh  clean.sh
src/: auth.py  db.py  errors.py  main.py  password.py
static/: about.html  index.html  professor.html  script.js  student.html  style.css
xv6/: Makefile  hello.c  tail.c
(+902 files in other folders)
